# cmake_project

./: .gitignore  CMakeLists.txt  MyProjectConfig.h.in  main.cpp  run.sh
adder/: CMakeLists.txt  adder.cpp  adder.h
